# chords

./: .pdm-python  README.md  console.py  pyproject.toml  util.py
examples/: pychord-midi.py
